tests/test_files_pa3/external/errors/TwoMainsInSameProgram.ic
class TwoMains{
	
	static void main(string[] args){
		TwoMains.getSomeOne();
		TwoMains.getSomeOne();
		if (true)
			TwoMains.getSomeOne();
	}
	
	
	static int getSomeOne(){
		int someOne = 1;
		return someOne;
	}
		
}


class Another{

	static void main(string[] args){}
	
}